--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^4.0.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
