--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
     "gh-pages": "^4.0.0",
